# Grove

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  install.ps1  install.sh  mkdocs.yml  pyproject.toml  versions.json
.codex/: config.toml
.github/workflows/: ci.yml  docs-cleanup.yml  docs.yml  release.yml
.grove/: config.json
current/: build-info.json  configure-reference.md  develop-architecture.md  develop-contributing.md  develop-principles.md  features-branch-provenance.md  features-peek.md  getting-started.md  index.html  index.md  objects.inv  sitemap.xml  troubleshooting.md  use-cli.md  use-tui.md
current/configure-agents/: index.html
current/configure-init-scripts/: index.html
current/configure-project/: index.html
current/configure-reference/: index.html
current/develop-architecture/: index.html
current/develop-contributing/: index.html
current/develop-principles/: index.html
current/develop-public-api/: index.html
current/features-branch-provenance/: index.html
current/features-cascade/: index.html
current/features-peek/: index.html
current/features-status/: index.html
current/features-workspace-lifecycle/: index.html
current/getting-started/: index.html
current/js/: copy-page.js  icon-inject.js
current/search/: search_index.json
current/stylesheets/: grove.css
current/troubleshooting/: index.html
current/use-auth/: index.html
current/use-cli/: index.html
current/use-tui/: index.html
current/use-webapp/: index.html
current/use-workflow/: index.html
docs/: CLAUDE.md  build-info.json  configure-agents.md  design-system.md  develop-public-api.md  features-activity.md  getting-started.md  index.md  troubleshooting.md  use-auth.md  use-cli.md  use-tui.md  use-webapp.md  use-workflow.md
docs/hooks/: og_site_name.py  schema_to_md.py
docs/stylesheets/: grove.css
latest/: build-info.json  configure-init-scripts.md  configure-reference.md  develop-public-api.md  features-cascade.md  features-status.md  features-workspace-lifecycle.md  getting-started.md  grove.schema.json  index.html  index.md  sitemap.xml  use-auth.md  use-cli.md  use-webapp.md  use-workflow.md
latest/configure-agents/: index.html
latest/configure-init-scripts/: index.html
latest/configure-project/: index.html
latest/configure-reference/: index.html
latest/css/: mewbo.css
latest/develop-architecture/: index.html
latest/develop-contributing/: index.html
latest/develop-principles/: index.html
latest/develop-public-api/: index.html
latest/features-activity/: index.html
latest/features-branch-provenance/: index.html
latest/features-cascade/: index.html
latest/features-peek/: index.html
latest/features-status/: index.html
latest/features-workspace-lifecycle/: index.html
latest/getting-started/: index.html
latest/js/: ask-ai.js  deepwiki-backend.js  mermaid-init-v2.js  pygments-theme.js  search-enhance.js  version-switcher.js  webmcp.js
latest/search/: search_index.json
latest/stylesheets/: grove.css
latest/troubleshooting/: index.html
latest/use-auth/: index.html
latest/use-cli/: index.html
latest/use-tui/: index.html
latest/use-webapp/: index.html
latest/use-workflow/: index.html
main/: build-info.json  configure-agents.md  configure-init-scripts.md  configure-project.md  configure-reference.md  develop-architecture.md  features-branch-provenance.md  features-cascade.md  features-peek.md  features-status.md  features-workspace-lifecycle.md  grove.schema.json  index.html  objects.inv  sitemap.xml  use-cli.md  use-tui.md
main/configure-agents/: index.html
main/configure-init-scripts/: index.html
main/configure-project/: index.html
main/configure-reference/: index.html
main/css/: base.css  mewbo.css
main/develop-architecture/: index.html
main/develop-contributing/: index.html
main/develop-principles/: index.html
main/develop-public-api/: index.html
main/features-branch-provenance/: index.html
main/features-cascade/: index.html
main/features-peek/: index.html
main/features-status/: index.html
main/features-workspace-lifecycle/: index.html
main/getting-started/: index.html
main/js/: carousel.js  copy-page.js  version-switcher.js  webmcp.js
main/search/: search_index.json
main/stylesheets/: grove.css
main/troubleshooting/: index.html
main/use-auth/: index.html
main/use-cli/: index.html
main/use-tui/: index.html
main/use-webapp/: index.html
main/use-workflow/: index.html
overrides/js/: webmcp.js
overrides/templates/: search.html  seo.html
packaging/: CLAUDE.md
packaging/systemd/: README.md  grove-daemon.service.in  grove-webapp.service.in
src/grove/: __init__.py  cli.py
tests/: CLAUDE.md  conftest.py  test_cli_composition.py  test_systemd_packaging.py
tests/cli/: test_auth_commands.py  test_sessions_commands.py
tests/client/: test_client_http.py  test_local_attach.py  test_local_transport.py  test_ssh_attach.py  test_ssh_transport.py
tests/core/: test_activity_service.py  test_agent_session.py  test_auth.py  test_branch_plan.py  test_commits.py  test_config_cascade.py  test_config_schema_dump.py  test_init_script.py  test_paths.py  test_peek.py  test_root_workspace.py  test_session_explorer.py  test_store_repo_roots.py  test_store_repo_scoping.py  test_tmux_helpers.py  test_workspace_lifecycle.py  test_workspace_update.py
tests/daemon/: conftest.py  test_activity_endpoints.py  test_app_skeleton.py  test_auth_endpoints.py  test_branches.py  test_repos.py  test_sessions_endpoints.py  test_workspaces_attach_peek.py  test_workspaces_create.py  test_workspaces_lifecycle.py  test_workspaces_list.py  test_workspaces_update.py
tests/integration/: test_real_tmux_git.py
tests/tui/: test_card_render.py  test_cli_schema_stdout.py  test_dashboard.py  test_dashboard_render.py  test_filter_and_jump.py  test_footer.py  test_list_screen.py  (+6 more)
webapp/: .env.example  .gitignore  CLAUDE.md  README.md  middleware.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
(+171 files in other folders)
